# Crucible

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  DEVPOST.md  Dockerfile  Makefile  PROOF.md  README.md  VIDEO_SCRIPT.md  crucible.html  pyproject.toml  render.yaml
.claude/: CHANGELOG.md
data/: README.md
docs/: UI_API_CONTRACT.md
docs/superpowers/: COORDINATION.md  SESSION-TEAM-A.md  SESSION-TEAM-B.md
docs/superpowers/plans/: 2026-06-07-crucible.md
docs/superpowers/prds/: 2026-06-07-crucible.md
docs/superpowers/specs/: 2026-06-07-crucible-design.md
scripts/: live_gemini_demo.py  offline_demo.py  phoenix_e2e.py  run_loop_cli.py  run_prebaked.py  spike_adk_phoenix_mcp.py
slides/: index.html
src/crucible/: candidate.py  comparator.py  eval_engine.py  mcp_introspect.py  models.py  mutation.py  orchestrator.py  phoenix_client.py  sandbox.py  types.py
src/crucible/datasets/: catalog.py  concert_singer.py  ecommerce.py  hardness.py  spider_loader.py  split.py  university.py  world_bundle.py
src/crucible/server/: app.py  events.py
tests/: conftest.py  test_candidate.py  test_catalog.py  test_comparator.py  test_eval_engine.py  test_hardness.py  test_mcp_introspect.py  test_models.py  test_mutation.py  test_orchestrator.py  test_phoenix_client.py  test_sandbox.py  test_server.py  test_spider_loader.py  test_split.py
ui/: index.html  package-lock.json
ui/src/: App.tsx  index.css  styles.css  useEvents.ts
ui/src/components/: ActivityLog.tsx  ByoGuide.tsx  Console.tsx  CopyBlock.tsx  DatabasePicker.tsx  Hero.tsx  HowItWorks.tsx  HypothesisCard.tsx  ItemCard.tsx  Leaderboard.tsx  LoopDiagram.tsx  PhoenixPanel.tsx  SchemaViewer.tsx  SiteFooter.tsx
ui/src/lib/: scroll.ts
